<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GameRate v1.0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <VideoView
        android:id="@+id/videoViewAbout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_contact"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btnSoporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_soporte"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_compartir"
        android:layout_marginTop="10dp"/>
</LinearLayout>