<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_preferencias"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="?android:attr/textColorPrimary"/>

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_modo_oscuro"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="?android:attr/textColorPrimary"/>

        <Spinner
            android:id="@+id/spinnerIdioma"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="48dp" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cuenta"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="?android:attr/textColorPrimary"/>

        <Button
            android:id="@+id/btnModificarPerfil"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_modificar_perfil"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnCerrarSesion"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cerrar_sesion"
            android:textColor="#FF4444" />

        <ProgressBar
            android:id="@+id/progressBarPerfil"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>